Fixed issue with admin section not showing in backend and grid styles to be dynamic.

--- a/assets/scss/frontend.scss
+++ b/assets/scss/frontend.scss
@@ -1,7 +1,31 @@
 #wcgl-category-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 1rem;
+    width: 100%;
+}
+
+.wcgl-grid.columns-1 {
+    grid-template-columns: repeat(1, 1fr);
+}
+
+.wcgl-grid.columns-2 {
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.wcgl-grid.columns-3 {
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.wcgl-grid.columns-4 {
+    grid-template-columns: repeat(4, 1fr);
+}
+
+.wcgl-grid.columns-5{
+    grid-template-columns: repeat(5 1fr);
+}
+
+.wcgl-grid.columns-6 {
+    grid-template-columns: repeat(6, 1fr);
 }
 
 .wcgl-category {
